made the api open for image upload
